# lw-config

./: .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs  lw-config.pot  lw-config.sh  lw-config.slint  update_translations
.github/workflows/: main.yml
locale/ru/LC_MESSAGES/: lw-config.mo  lw-config.po
src/: main.rs
